--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 </ul>
 
                 <ul class="sidebar-profileMenu">
-                    <li class="sidebar-profileMenu-item" title="Setting">
+                    <li class="mainMenu-listItem sidebar-profileMenu-item" title="Setting">
                         <img src="./assets/img/icons/setting.svg" alt="Setting">
                     </li>
-                    <li class="sidebar-profileMenu-item" title="Account">
+                    <li class="mainMenu-listItem sidebar-profileMenu-item" title="Account">
                         <img src="./assets/img/icons/user.svg" alt="User">
                     </li>
                 </ul>
@@ -145,11 +145,44 @@
                         </li>
                     </ul>
                 </div>
+
+                <div class="sidebar-subMenu-listWrp setting-submenu">
+                    <ul class="sidebar-subMenu-list">
+                        <li>
+                            <span class="sidebar-subMenu-listItem">
+                                <img src="./assets/img/icons/user.svg" alt="user">
+                                <span class="sidebar-subMenu-listItemName">My Profile</span>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="sidebar-subMenu-listItem">
+                                <img src="./assets/img/icons/trusted.svg" alt="trusted">
+                                <span class="sidebar-subMenu-listItemName">Privacy</span>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="sidebar-subMenu-listItem">
+                                <img src="./assets/img/icons/notification.svg" alt="notification">
+                                <span class="sidebar-subMenu-listItemName">Notification</span>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="sidebar-subMenu-listItem">
+                                <img src="./assets/img/icons/setting.svg" alt="setting">
+                                <span class="sidebar-subMenu-listItemName">Setting</span>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </aside>
         <div class="right-content">
             <header>
                 <h4>Header Content</h4>
+                <label class="theme-switch">
+                    <input type="checkbox" id="themeToggle">
+                    <span class="slider"></span>
+                </label>
             </header>
 
             <main class="main-content">
